# Windows-AudioDevice-Select

./: CMakeLists.txt  README.md
audio-dev-enumerate/: CMakeLists.txt  PolicyConfig.h  audio-dev-enumerate.cpp  audio-dev-enumerate.h
